# efs

./: AGENTS.md  Cargo.toml  README.md
efs/: Cargo.toml
efs-cli/: Cargo.toml
efs-cli/src/: config.rs  main.rs
efs-cli/tests/: integration_test.rs  sanity.rs  short_id_test.rs
efs-tui/: Cargo.toml
efs-tui/src/: config.rs  main.rs
efs/src/: lib.rs  path.rs
efs/src/chunk/: mod.rs
efs/src/crypto/: mod.rs  standard.rs
efs/src/crypto/cipher/: mod.rs
efs/src/crypto/hash/: mod.rs
efs/src/crypto/kdf/: mod.rs
efs/src/index/: bptree_index.rs  bptree_storage.rs  kv_index.rs  mod.rs
efs/src/mirror/: mod.rs
efs/src/silo/: mod.rs  session.rs
efs/src/storage/: block.rs  cache.rs  local.rs  lru.rs  memory.rs  mod.rs  s3.rs
efs/tests/: alternative_crypto_tests.rs  bplus_tree_index_tests.rs  btree_index_tests.rs  builder_tests.rs  conclusive_tests.rs  configurable_crypto_tests.rs  crypto_tests.rs  custom_crypto_tests.rs  free_list_tests.rs  leak_tests.rs  multi_config_tests.rs  persistence_tests.rs  put_recursive_tests.rs  recursive_delete_tests.rs
