[package]
name = "efs-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
efs = { path = "../efs" }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bincode = "1.3"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }

argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
rpassword = "7.3"
object_store = { version = "0.11", features = ["aws"] }
secrecy = { version = "0.10.3", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.10"
