[package]
name = "efs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-util = { version = "0.7", features = ["full"] }
lru = "0.12"
anyhow = "1.0"
async-trait = "0.1"
async-recursion = "1.0"
bincode = "1.3"
blake3 = "1.3"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
object_store = { version = "0.11", features = ["aws"] }
bptree = { git = "https://github.com/Dan-J-D/bptree" }
rand = "0.8"
getset = "0.1"
tempfile = "3.3"
zeroize = { version = "1.5", features = ["derive"] }
futures = "0.3"
aes-gcm = "0.10"
argon2 = "0.5"
walkdir = "2.4"
