[package]
name = "efs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.21"
blake3 = "1.5"
bytes = "1.5"
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"
hex = "0.4"
object_store = { version = "0.11", features = ["aws"] }
rand = "0.8"
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
walkdir = "2"
tracing = "0.1"
bptree = { path = "../../bptree" }
aes-gcm = "0.10"
argon2 = "0.5"
async-recursion = "1.0"
lru = "0.12"
getset = "0.1"
bincode = "1.3"
chacha20poly1305 = "0.10.1"
sha3 = "0.10.8"
pbkdf2 = "0.12.2"
hmac = "0.12.1"
sha2 = "0.10.9"
blake2 = "0.10.6"
zeroize = { version = "1.8.2", features = ["derive"] }
secrecy = { version = "0.10.3", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
